<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ro.pub.cs.systems.eim.practicaltest01.PracticalTest01SecondaryActivity"
    tools:showIn="@layout/activity_practical_test01_secondary">
    <TextView
        android:id="@+id/counter_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/counterView"/>
    <Button
        android:id="@+id/leftBtnSec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okBtn"
        android:layout_below="@id/counter_view"
        android:gravity="center"/>
    <Button
        android:id="@+id/rightBtnSec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelBtn"
        android:layout_toRightOf="@id/leftBtnSec"
        android:layout_below="@id/counter_view"
        android:gravity="center"
        />
</RelativeLayout>
